tests/semantica/invalid/metodos/test9.ctds
program 
    {
        bool z = true;
		integer inc(integer z){
			z = false;
		}

        void main(){
			
		}
    }